--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "class-validator": "^0.13.2",
     "helmet": "^4.6.0",
     "mongoose": "^6.0.14",
+    "nanoid": "^3.1.30",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
